tests/snapshots/errors/type_error_for_in.mc
for i in 42 {
    print(i);
}
